--- a/fumabase.jsonc
+++ b/fumabase.jsonc
@@ -47,6 +47,7 @@
   },
   // to add new domains you can simply add them here, then add a CNAME record pointing to cname.fumabase.com
   "domains": [
-    "zod-v3.fumabase.com"
+    "zod-v3.fumabase.com",
+    "zod-v3.localhost"
   ]
 }
